splash z-index bug

--- a/src/components/fixed-bottom/fixed-bottom.scss
+++ b/src/components/fixed-bottom/fixed-bottom.scss
@@ -1,5 +1,6 @@
 fixed-bottom {
   position: fixed;
+  z-index: 10000;
   width: 100%;
   bottom: 0;
   padding: 18px 0;
